[package]
name = "rss-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
reactive_stores = "0.1.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
supabase-auth = "0.10.12"
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }
